# fluidity

./: .gitignore  Jenkinsfile  aclocal.m4  configure  configure.in  main.cpp  meson.build  petsc_makefile
assemble/: Adapt_State.F90  Advection_Diffusion_CG.F90  Advection_Diffusion_FV.F90  Assemble_CMC.F90  Compressible_Projection.F90  Coriolis.F90  Foam_Drainage.F90  Foam_Flow.F90  Full_Projection.F90  Hybridized_Helmholtz.F90  Hydrostatic_Pressure.F90  Manifold_Projections.F90  Mba2d_Integration.F90  MeshMovement.F90  Momentum_Diagnostic_Fields.F90  Momentum_Equation.F90  Multiphase.F90  Particle_Diagnostics.F90  Sam_integration.F90  Slope_limiters_DG.F90  Surface_Id_Interleaving.F90  Timeloop_utilities.F90  Turbine.F90  Vertical_Balance_Pressure.F90  Zoltan_callbacks.F90  Zoltan_detectors.F90  Zoltan_global_variables.F90  Zoltan_integration.F90
assemble/tests/: test_dg_interpolation.F90
bathymetry/: NetCDF_reader.h  SampleNetCDF2.h  import_bath_data.cpp  read_netcdf_interface.cpp
climatology/: create_climatology_atlas.cpp
debug/: C++_Debug.cpp  Debug.F90  Diagnostic_Output.F90
diagnostics/: Diagnostic_Fields_New.F90.in  Field_Copies.F90  Momentum_Diagnostics.F90  Simple_Diagnostics.F90  Tidal_Diagnostics.F90
error_measures/: Assemble_metric.F90  Geometric_constraints_metric.F90  Gradation_metric.F90  Metric_advection.F90
error_measures/tests/: test_bound_metric_isotropic.F90
examples/eurohack24/: read_setnparticles_ats.cu  read_setnparticles_ats.sbatch  read_setnparticles_managed.cu  setnparticule.sbatch  write_setnparticles.sbatch
femtools/: Bound_field.F90  Checkpoint.F90  Colouring.F90  Coordinates.F90  Data_structures_C.c  Detector_Move_Lagrangian.F90  Detector_Parallel.F90  Detector_Tools.F90  Diagnostic_Fields.F90  Diagnostic_variables.F90  Element_Intersection.cpp  Element_Numbering.F90  Element_set.F90  Elements.F90  Embed_Python_Fortran.F90  FEFields.F90  Field_derivatives.F90  Fields_Allocates.F90  Fields_Base.F90  Fields_Calculations.F90  Global_Numbering.F90  Halo_Data_Types.F90  Halos_Allocates.F90  Halos_Base.F90  Halos_Communications.F90  Halos_Debug.F90  Halos_Derivation.F90  Halos_IO.cpp  Halos_Numbering.F90  Halos_Registration.F90  Halos_Repair.F90  ISCopyIndices.cpp  Integer_set.F90  Intersection_finder.F90  Mesh_Files.F90  Mesh_Quality_C.cpp  Metric_tools.F90  Multigrid.F90  Node_Owner_Finder.cpp  Node_Owner_Finder_Fortran.F90  (+40 more)
femtools/tests/: test_block_csr_transpose_diagonal.F90  test_block_csr_transpose_symmetric_sparsity.F90  test_compute_inner_product_sa.F90  test_multigrid.F90  test_quad_quadrature.F90
fldecomp/: fldgmsh.cpp  fldmain.cpp  fldtriangle.cpp  partition.cpp
h5hut/: configure.ac  meson.build  write_interface.sh
h5hut/src/h5core/: h5_file.c  h5_init.c
h5hut/src/h5core/private/: h5_attribs.h  h5_file.h  h5_hdf5.c  h5_hdf5.h  h5_model.h  h5_types.h
h5hut/src/include/: H5_const.f90
h5hut/src/include/h5core/: h5_types.h
h5hut/test/: testframe.c
horizontal_adaptivity/: Extrude.F90
include/: Element_Intersection.h  Halos_IO.h  MeshDataStream.h  Node_Owner_Finder.h  Precision.h  Profiler.h  Usage.h  c++debug.h  fdebug.h  fldecomp.h  flmpi.h  partition.h  python_statec.h  version.h
libadaptivity/: aclocal.m4  configure  meson.build
libadaptivity/adapt3d/include/: fdebug_adapt.h
libadaptivity/adapt3d/src/: AdaptProgress.F90
libadaptivity/load_balance/include/: Element.h  ElementVector.h  Graph.h  MI5.h  Mesh.h  Node.h  NodeVector.h  PressureNode.h  c++debug.h  comTools.h  packing.h  sam_mpi.h  samtypes.h
libadaptivity/load_balance/src/: Mesh.cpp  fluidity_sam.cpp
libmba2d/: calcrv.f  makM.f  meson.build  splitE.f  time.f
libspud/python/: libspud.c
libvtkfortran/: meson.build  vtkfortran.cpp  vtkmeshio.cpp
libvtkfortran/include/: vtkmeshio.h
libwm/: Wm4System.cpp
main/: Fluids.F90  Usage.cpp
ocean_forcing/: BulkForcing.h  Calendar.h  ClimateReader.h  FluxesReader.cpp  FluxesReader.h  NEMOReader.cpp  NEMOReader.h  NEMOdataload.cpp  NetCDFReader.h  SampleNetCDF.cpp  SampleNetCDF.h  bulk_parameterisations.F90  forcingERA40.cpp  forcingERA40_fortran.F90  load_netcdf.F90
parameterisation/: Equation_of_State.F90  Gls_vertical_turbulence_model.F90  iceshelf_meltrate_surf_normal.F90  k_epsilon.F90
preprocessor/: Boundary_Conditions_From_Options.F90  Field_Priority_Lists.F90  Initialise_Fields.F90  Populate_State.F90  fluidity_check_options.cpp  synthetic_bc.F90
python/: vtktools.py
python/fluidity/: state_types.py
schemas/: fluidity_options.rnc  fluidity_options.rng
sediments/: Sediment.F90
tests/: tools.mk
tests/5material-droplet-parallel/: 5material-droplet-parallel.xml
tests/Stokes_Poiseuille/: Stokes_Poiseuille.xml
tests/Stokes_may_sinker_stepxy/: Stokes_may_sinker_stepxy.xml
tests/Stokes_may_solcx_stepx/: Stokes_may_solcx_stepx.xml
tests/Stokes_may_solky_exponential/: Stokes_may_solky_exponential.xml
tests/Stokes_slab_detachment/: Stokes_slab_detachment.xml
tests/Stokes_square_convection_1e4_p1p1_parallel/: Stokes_square_convection_1e4_p1p1_parallel.xml
tests/Stokes_square_convection_1e4_p2p1_parallel/: Stokes_square_convection_1e4_p2p1_parallel.xml
tests/add_src_directly_1d_2grp_hom_zerobc_eig_fv/: Makefile  add_src_directly_1d_2grp_hom_zerobc_eig_fv.xml
tests/add_src_directly_1d_2grp_hom_zerobc_eig_p1cg/: Makefile  add_src_directly_1d_2grp_hom_zerobc_eig_p1cg.xml
tests/add_src_directly_1d_2grp_hom_zerobc_eig_p1cv/: Makefile  (+1 more)
tools/: Checkmesh.F90  Differentiate_Vtu.F90  Fladapt.F90  Fladapt_main.cpp  Flredecomp.F90  Flredecomp_main.cpp  Meshconv.F90  Project_Vtu.F90  Project_Vtu_main.cpp  Streamfunction_2D.F90  Supermesh_Difference.F90  Vertical_Integration.F90  Vtu_Bins.F90  Vtu_Bins_main.cpp  fldiagnostics.F90  gmsh2triangle.py  gmsh2vtu.F90  gmsh2vtu_main.cpp  make_check_options.py  make_diagnostic_fields.py  make_register_diagnostics.py  periodise.F90  petsc_readnsolve.F90  petsc_readnsolve_main.cpp  project_to_continuous.F90  test_laplacian.F90  test_pressure_solve.F90  test_pressure_solve_main.cpp  unifiedmesh.F90  vtkprojection.cpp
(+157 files in other folders)
