inc_adaptivity = include_directories('adapt3d/include', 'load_balance/include')

lib_adaptivity = static_library(
    'libadaptivity',
    [
        'load_balance/src/fluidity_sam.cpp',
	'adapt3d/src/adapt1.F',
	'adapt3d/src/adaptmem.F',
	'adapt3d/src/AdaptProgress.F90',
	'adapt3d/src/addedg.F',
	'adapt3d/src/addele.F',
	'adapt3d/src/addnd.F',
	'adapt3d/src/adptvy.F',
	'adapt3d/src/chkint.F',
	'adapt3d/src/cmlced.F',
	'adapt3d/src/cmneds.F',
	'adapt3d/src/cmnnod.F',
	'adapt3d/src/cnctel.F',
	'adapt3d/src/Debug.F',
	'adapt3d/src/edg2fc.F',
	'adapt3d/src/edgels.F',
	'adapt3d/src/edgfnc.F',
	'adapt3d/src/edginf.F',
	'adapt3d/src/edgtst.F',
	'adapt3d/src/elmdiv.F',
	'adapt3d/src/elmfnc.F',
	'adapt3d/src/elminf.F',
	'adapt3d/src/elnods.F',
	'adapt3d/src/elstst.F',
	'adapt3d/src/facnrm.F',
	'adapt3d/src/fc2edg.F',
	'adapt3d/src/Flag_Handling.F',
	'adapt3d/src/fndedg.F',
	'adapt3d/src/fndelm.F',
	'adapt3d/src/fndsrf.F',
	'adapt3d/src/getflg.F',
	'adapt3d/src/getsiz.F',
	'adapt3d/src/gtndfl.F',
	'adapt3d/src/hasedg.F',
	'adapt3d/src/hasnod.F',
	'adapt3d/src/inipwr.F',
	'adapt3d/src/inirls.F',
	'adapt3d/src/initim.F',
	'adapt3d/src/initls.F',
	'adapt3d/src/intfld.F',
	'adapt3d/src/intrpl.F',
	'adapt3d/src/invrse.F',
	'adapt3d/src/mkadpt.F',
	'adapt3d/src/mkecls.F',
	'adapt3d/src/mkfixd.F',
	'adapt3d/src/mknels.F',
	'adapt3d/src/mtetin.F',
	'adapt3d/src/ndcnct.F',
	'adapt3d/src/nodmov.F',
	'adapt3d/src/nodtst.F',
	'adapt3d/src/nwcnel.F',
	'adapt3d/src/nxtid.F',
	'adapt3d/src/rmvedg.F',
	'adapt3d/src/rmvele.F',
	'adapt3d/src/rmvnd.F',
	'adapt3d/src/rmvnxt.F',
	'adapt3d/src/second.F',
	'adapt3d/src/setflg.F',
	'adapt3d/src/setgmy.F',
	'adapt3d/src/shredg.F',
	'adapt3d/src/shwtim.F',
	'adapt3d/src/spledg.F',
	'adapt3d/src/stndfl.F',
	'adapt3d/src/tetvol.F',
	'adapt3d/src/vals3d.F',
	'adapt3d/src/wchfac.F',
	'adapt3d/src/write_log.F',
	'load_balance/src/Element.cpp',
	'load_balance/src/exports.cpp',
	'load_balance/src/fixate.cpp',
	'load_balance/src/formHalo2.cpp',
	'load_balance/src/functional_2d.cpp',
	'load_balance/src/Graph.cpp',
	'load_balance/src/graph_partitioning.cpp',
	'load_balance/src/imports.cpp',
	'load_balance/src/invent_pressure_mesh.cpp',
	'load_balance/src/Mesh.cpp',
	'load_balance/src/MI5.cpp',
	'load_balance/src/migrate.cpp',
	'load_balance/src/mtetin.F',
	'load_balance/src/Node.cpp',
	'load_balance/src/packing.cpp',
	'load_balance/src/ParMetis.cpp',
	'load_balance/src/PressureNode.cpp',
    ],
    include_directories: inc_adaptivity,
    dependencies: mpi,
    cpp_args: ['-DUSING_DOUBLE_PRECISION'],
)