lib_mba2d = static_library(
    'mba2d',
    [
        'ani2.f', 'auxSE.f', 'auxSF.f', 'auxSP.f', 'calcrv.f',
        'clpsF.f', 'dsort.f', 'error.f', 'forlibmba.f', 'insrtP.f',
        'isnan.c', 'isnan_f.f', 'lintrp2D.f', 'list_bsct.f', 'makM.f',
        'makQ_linear.f', 'makS.f', 'mba_analytic.f', 'mba_nodal.f',
        'minim.f', 'moveP.f', 'nlnfnc.f', 'prjcrv.f', 'splitE.f',
        'swapF.f', 'time.f', 'untangle.f', 'update.f', 'utils.f',
    ],
)